--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile:sass":"node-sass scss/main.scss css/styles.css "
+    "compile:sass":"node-sass scss/main.scss css/styles.css -w"
   },
   "repository": {
     "type": "git",
